--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,7 +24,8 @@
       "js": [
         "/assets/js/vendors/jquery-3.0.0.min.js",
         "/assets/js/vendors/vue.js",
-        "/assets/js/modules/storage.js"
+        "/assets/js/modules/storage.js",
+        "content/modules/coordsCopy.js"
       ]
     }, {
       "matches": ["http://ogame1304.de/game/index.php?page=overview*"],
